--- a/src/drivers/imu/invensense/icm20948/CMakeLists.txt
+++ b/src/drivers/imu/invensense/icm20948/CMakeLists.txt
@@ -34,6 +34,7 @@ px4_add_module(
 	MODULE drivers__imu__icm20948
 	MAIN icm20948
 	COMPILE_FLAGS
+		-DDEBUG_BUILD
 	SRCS
 		AKM_AK09916_registers.hpp
 		ICM20948.cpp
